# abbott-stardist-task

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_test.yml
src/abbott_segmentation_tasks/: __FRACTAL_MANIFEST__.json  pre_post_process.py  seeded_segmentation.py  stardist_segmentation_task.py  utils.py
src/abbott_segmentation_tasks/dev/: task_list.py
src/abbott_segmentation_tasks/dev/docs_info/: seeded_segmentation.md
src/abbott_stardist_task/: __FRACTAL_MANIFEST__.json  __init__.py  stardist_segmentation_task.py  utils.py
src/abbott_stardist_task/dev/: task_list.py
src/abbott_stardist_task/dev/docs_info/: stardist_segmentation_task.md
tests/: __init__.py  conftest.py  test_seeded_segmentation_workflow.py  test_stardist_segmentation_task.py
